# cmsdf

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: cmsdf.h
src/: cmsdf.c  main.c
